    which I've submitted, for this to work prefectly.
  * Debian package (and any other packages built using make install)
    now includes bash completion.
  * version --raw now works when run outside a git repository.
  * assistant --startdelay now works when run outside a git repository.
  * dead now accepts multiple --key options.

 -- Joey Hess <id@joeyh.name>  Fri, 10 Jul 2015 16:36:42 -0400

git-annex (5.20150710) unstable; urgency=medium

  * add: Stage symlinks the same as git add would, even if they are not a
    link to annexed content.
  * sync: When annex.autocommit=false, avoid making any commit of local
    changes, while still merging with remote to the extent possible.
  * unused: --used-refspec can now be configured to look at refs in the
    reflog. This provides a way to not consider old versions of files to be
    unused after they have reached a specified age, when the old refs in
    the reflog expire.
  * log: Fix reversion introduced in version 5.20150528 that broke this command.
  * assistant --autostart: First stop any daemons that are already running,
    which might be left over from a previous login session and so unable to
    use the ssh agent of a new login session.
  * assistant: Fix local pairing to not include newline in ssh pubkey,
    which is rejected on the other end for security reasons.
  * assistant: Fix ANNEX_SHELL_DIR written to ~/.ssh/authorized_keys 
    in local pairing to be the absolute path to the repository, not "."
    This was a reversion caused by the relative path changes in 5.20150113.
  * Brought back the setkey plumbing command that was removed in 2011, since
    we found a use case for it. Note that the command's syntax was changed
    for consistency.
  * bugfix: Pass --full-tree when using git ls-files to get a list of files
    on the git-annex branch, so it works when run in a subdirectory.
    This bug affected git-annex unused, and potentially also transitions
    running code and other things.